# ECSolver

./: .gitignore  README.md  pyproject.toml
src/: exp_solver.py  solver.py
src/factorial/: factorial.py
test/: test_ExpSolver.py
