[project]
name = "factorial"
version = "0.1.0"
description = "Utilidad de factorial"
authors = [
    { name = "Cristian" },
    { name = "Michael" },
    { name = "Angela" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.scripts]
factorial-cli = "factorial.factorial:main"